@@ -20,6 +20,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #10484: Fix the CGIHTTPServer's PATH_INFO handling problem.
+
 - Issue #11199: Fix the with urllib which hangs on particular ftp urls.
 
 - Issue #5219: Prevent event handler cascade in IDLE.
